--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Implementação de um clone do TabNews do Filipe Deschamps para aprendizado de programação em projeto full stack robusto e escalável.",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev",
+    "dev": "npm run services:up && next dev",
+    "services:up": "docker compose -f infra/compose.yaml up -d",
+    "services:stop": "docker compose -f infra/compose.yaml stop",
+    "services:down": "docker compose -f infra/compose.yaml down",
     "lint:check": "prettier --check .",
     "lint:fix": "prettier --write .",
     "test": "jest",
